[project]
name = "agent-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mistralai>=1.1.4",
    "langgraph==1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic==2.10.4",
    "python-dotenv==1.2.2",
    "streamlit>=1.58.0",
]
